--- a/practise/.vscode/tasks.json
+++ b/practise/.vscode/tasks.json
@@ -22,7 +22,15 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "detail": "调试器生成的任务。"
+            "detail": "调试器生成的任务。",
+            
+            // 以下是自己加上的
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "new"
+            }
         }
     ],
     "version": "2.0.0"
